// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Support - Home Branch Card should match snapshot on desktop 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-13gs6in-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiBox-root css-1588wxq"
    >
      <div
        class="MuiBox-root css-0"
      >
        <img
          alt="HomeBranch"
          class="MuiBox-root css-1t9djzq"
          src="home-branch.svg"
        />
      </div>
      <div
        class="MuiBox-root css-0"
      >
        <div
          class="MuiBox-root css-1wppjvp"
        >
          <div
            align=""
            class="MuiCardHeader-root css-1bnehoc-MuiCardHeader-root"
          >
            <div
              class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
            >
              <span
                class="MuiTypography-root MuiTypography-h4 MuiCardHeader-title css-x80elu-MuiTypography-root"
              >
                Fortiline Waterworks
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-t0051x"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 css-1mcg7za-MuiTypography-root"
          >
            1628 Barton Chapel Road
             
            
             
            Augusta
            ,
             
            Georgia
             
            30909
          </p>
        </div>
        <div
          class="MuiBox-root css-1yfxu03"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 css-1yo1z97-MuiTypography-root"
          >
            Phone Number
            :
             
          </span>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-1uzpfpa-MuiTypography-root-MuiLink-root"
            href="tel:(703) 737-3705"
          >
            (703) 737-3705
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Support - Home Branch Card should match snapshot on desktop with empty data 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-13gs6in-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiBox-root css-1588wxq"
    >
      <div
        class="MuiBox-root css-0"
      >
        <img
          alt="HomeBranch"
          class="MuiBox-root css-1t9djzq"
          src="home-branch.svg"
        />
      </div>
      <div
        class="MuiBox-root css-0"
      >
        <div
          class="MuiBox-root css-1wppjvp"
        >
          <div
            align=""
            class="MuiCardHeader-root css-1bnehoc-MuiCardHeader-root"
          >
            <div
              class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
            >
              <span
                class="MuiTypography-root MuiTypography-h4 MuiCardHeader-title css-x80elu-MuiTypography-root"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-t0051x"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 css-1mcg7za-MuiTypography-root"
          >
            
             
            
             
            
            ,
             
            
             
            
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Support - Home Branch Card should match snapshot on desktop with no Home Branch 1`] = `
<div>
  <div
    class="MuiBox-root css-12qhuyy"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-13gs6in-MuiPaper-root-MuiCard-root"
    >
      <div
        class="MuiBox-root css-k008qs"
      >
        <div
          class="MuiBox-root css-19kzrtu"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
            style="width: 80px; height: 80px;"
          />
        </div>
        <div
          class="MuiBox-root css-1rzdnss"
        >
          <span
            class="MuiTypography-root MuiTypography-h2 css-llmy31-MuiTypography-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
              style="width: 250px;"
            />
          </span>
          <span
            class="MuiTypography-root MuiTypography-h4 css-rbn354-MuiTypography-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
              style="width: 200px;"
            />
          </span>
          <span
            class="MuiTypography-root MuiTypography-h4 css-rbn354-MuiTypography-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
              style="width: 200px;"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Support - Home Branch Card should match snapshot on mobile 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-17dmvp0-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiBox-root css-1voojg0"
    >
      <div
        class="MuiBox-root css-0"
      >
        <img
          alt="HomeBranch"
          class="MuiBox-root css-1t9djzq"
          src="home-branch.svg"
        />
      </div>
      <div
        class="MuiBox-root css-0"
      >
        <div
          class="MuiBox-root css-1wppjvp"
        >
          <div
            align="center"
            class="MuiCardHeader-root css-1bnehoc-MuiCardHeader-root"
          >
            <div
              class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
            >
              <span
                class="MuiTypography-root MuiTypography-h4 MuiCardHeader-title css-x80elu-MuiTypography-root"
              >
                Fortiline Waterworks
              </span>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-3ciuqz"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 css-1mcg7za-MuiTypography-root"
          >
            1628 Barton Chapel Road
             
            
             
            Augusta
            ,
             
            Georgia
             
            30909
          </p>
        </div>
        <div
          class="MuiBox-root css-cr91pz"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 css-1yo1z97-MuiTypography-root"
          >
            Phone Number
            :
             
          </span>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-1uzpfpa-MuiTypography-root-MuiLink-root"
            href="tel:(703) 737-3705"
          >
            (703) 737-3705
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Support - Home Branch Card should match snapshot on mobile with empty data 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-17dmvp0-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiBox-root css-1voojg0"
    >
      <div
        class="MuiBox-root css-0"
      >
        <img
          alt="HomeBranch"
          class="MuiBox-root css-1t9djzq"
          src="home-branch.svg"
        />
      </div>
      <div
        class="MuiBox-root css-0"
      >
        <div
          class="MuiBox-root css-1wppjvp"
        >
          <div
            align="center"
            class="MuiCardHeader-root css-1bnehoc-MuiCardHeader-root"
          >
            <div
              class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
            >
              <span
                class="MuiTypography-root MuiTypography-h4 MuiCardHeader-title css-x80elu-MuiTypography-root"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-3ciuqz"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 css-1mcg7za-MuiTypography-root"
          >
            
             
            
             
            
            ,
             
            
             
            
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Support - Home Branch Card should match snapshot on mobile with no Home Branch 1`] = `
<div>
  <div
    class="MuiBox-root css-wc6la7"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-13gs6in-MuiPaper-root-MuiCard-root"
    >
      <div
        class="MuiBox-root css-dvxtzn"
      >
        <div
          class="MuiBox-root css-19kzrtu"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
            style="width: 80px; height: 80px;"
          />
        </div>
        <div
          class="MuiBox-root css-dvxtzn"
        >
          <span
            class="MuiTypography-root MuiTypography-h2 css-llmy31-MuiTypography-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
              style="width: 250px;"
            />
          </span>
          <span
            class="MuiTypography-root MuiTypography-h4 css-rbn354-MuiTypography-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
              style="width: 200px;"
            />
          </span>
          <span
            class="MuiTypography-root MuiTypography-h4 css-rbn354-MuiTypography-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
              style="width: 200px;"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
